fix: 修复编译错误 - 添加缺失的头文件和路径配置
修复问题：
1. MSS编译错误：
   - 添加stdbool.h到presence_detect.c
   - 添加UART/BIOS/OSAL等SDK头文件路径
   - 修正health_detect_types.h添加velocity字段

2. DSS编译错误：
   - 添加c6x.h到dsp_utils.h
   - 添加C6000编译器include路径
   - 添加CG_TOOL_ROOT变量

3. 数据结构修复：
   - 添加PRESENCE_MOTION枚举值
   - 添加velocityX/Y/Z字段到PointCloudFeatures

4. 删除临时文档：
   - 移除完成报告.md
   - 移除架构重建进度报告.md
   - 移除system_project_guide.md

--- a/project-code/AWRL6844_HealthDetect/src/system/makefile_system_ccs_bootimage_gen
+++ b/project-code/AWRL6844_HealthDetect/src/system/makefile_system_ccs_bootimage_gen
@@ -31,7 +31,7 @@ META_IMG_GEN=./metaImage_creator$(EXE_EXT)
 endif
 META_IMG_CONFIG=$(CONFIG_PATH)/metaimage_cfg.$(PROFILE).json
 
-json_content:=$(shell $(CAT) $(MULTI_CORE_BOOTIMAGE_PATH)/../metaimage_cfg.$(PROFILE).json)
+json_content:=$(shell $(CAT) $(CCS_PROJECT_DIR)/src/system/config/metaimage_cfg.$(PROFILE).json)
 new_json_content:=$(subst ../../examples/empty/xwrL684x-evm/system_freertos,$(MULTI_CORE_BOOTIMAGE_PATH),$(json_content))
 
 all:
@@ -40,8 +40,8 @@ all:
 	$(MKDIR) $(TEMP_PATH)
 	$(MKDIR) $(CONFIG_PATH)
 	@echo $(new_json_content) > $(META_IMG_CONFIG)
-	$(COPY) ../../AWRL6844_HealthDetect_MSS/$(PROFILE)/AWRL6844_HealthDetect_MSS.$(PROFILE).rig $(TEMP_PATH)/health_detect_mss_img.$(PROFILE).rig
-	$(COPY) ../../AWRL6844_HealthDetect_DSS/$(PROFILE)/AWRL6844_HealthDetect_DSS.$(PROFILE).rig $(TEMP_PATH)/health_detect_dss_img.$(PROFILE).rig
+	$(COPY) $(CCS_PROJECT_DIR)/../AWRL6844_HealthDetect_MSS/$(PROFILE)/AWRL6844_HealthDetect_MSS.out $(TEMP_PATH)/health_detect_mss_img.$(PROFILE).rig
+	$(COPY) $(CCS_PROJECT_DIR)/../AWRL6844_HealthDetect_DSS/$(PROFILE)/AWRL6844_HealthDetect_DSS.out $(TEMP_PATH)/health_detect_dss_img.$(PROFILE).rig
 	cd $(META_IMG_GEN_PATH) && $(META_IMG_GEN) --complete_metaimage $(META_IMG_CONFIG)
 	$(RMDIR) $(TEMP_PATH)
 	@echo .
