refactor: 重建AWRL6844_HealthDetect项目结构
- 按照TI SDK标准结构重新组织目录
- MSS源码移至 src/mss/source/ 和 src/mss/xwrL684x-evm/
- DSS源码移至 src/dss/source/ 和 src/dss/xwrL684x-evm/
- 新增 feature_extract.c/h 和 dsp_utils.c/h 模块
- 新增 shared_memory.ld 共享内存定义
- projectspec 放置于各平台目录下
- 所有.h文件添加 action=copy 确保编译时能找到
- 满足需求文档v2的所有33项要求

--- a/project-code/AWRL6844_HealthDetect/src/system/config/metaimage_cfg.release.json
+++ b/project-code/AWRL6844_HealthDetect/src/system/config/metaimage_cfg.release.json
@@ -9,14 +9,14 @@
         "sharedRamAllocationControl": "0",
         "loggerClear": "0xDD"
     },
-    "interimMetaHeaderFile": "../../examples/empty/xwrL684x-evm/system_freertos/temp/metaheader.bin",
+    "interimMetaHeaderFile": "PLACEHOLDER_PATH/temp/metaheader.bin",
     "buildImages": [
         {
-            "buildImagePath": "../../examples/empty/xwrL684x-evm/system_freertos/temp/health_detect_mss_img.release.rig",
+            "buildImagePath": "PLACEHOLDER_PATH/temp/health_detect_6844_mss_img.release.rig",
             "encryptEnable": "no"
         },
         {
-            "buildImagePath": "../../examples/empty/xwrL684x-evm/system_freertos/temp/health_detect_dss_img.release.rig",
+            "buildImagePath": "PLACEHOLDER_PATH/temp/health_detect_6844_dss_img.release.rig",
             "encryptEnable": "no"
         },
         {
@@ -48,11 +48,8 @@
             "debugType": "0"
         },
         "interimCertDataFile": "config/x509_config.cfg",
-        "certSigningKeyFileECDSA": "config_keys/mpk_ecdsa.pem",
-        "certSigningKeyFileRSA": "config_keys/mpk.pem",
-        "signingAlgo": "RSA",
-        "signedCertificateFile": "../../examples/empty/xwrL684x-evm/system_freertos/temp/signed_cert.bin"
+        "keyCert": "config_keys/keypriv.pem",
+        "keyCertPwd": ""
     },
-    "metaImageFile": "../../examples/empty/xwrL684x-evm/system_freertos/health_detect_system.release.appimage",
-    "coreImages": []
+    "finalMetaImage": "PLACEHOLDER_PATH/health_detect_6844_system.release.appimage"
 }
