--- a/project-code/AWRL6844_HealthDetect/src/system/config/metaimage_cfg.release.json
+++ b/project-code/AWRL6844_HealthDetect/src/system/config/metaimage_cfg.release.json
@@ -12,11 +12,11 @@
     "interimMetaHeaderFile": "PLACEHOLDER_PATH/temp/metaheader.bin",
     "buildImages": [
         {
-            "buildImagePath": "PLACEHOLDER_PATH/temp/health_detect_6844_mss_img.release.rig",
+            "buildImagePath": "PLACEHOLDER_PATH/temp/health_detect_6844_mss_img.Release.rig",
             "encryptEnable": "no"
         },
         {
-            "buildImagePath": "PLACEHOLDER_PATH/temp/health_detect_6844_dss_img.release.rig",
+            "buildImagePath": "PLACEHOLDER_PATH/temp/health_detect_6844_dss_img.Release.rig",
             "encryptEnable": "no"
         },
         {
@@ -48,8 +48,11 @@
             "debugType": "0"
         },
         "interimCertDataFile": "config/x509_config.cfg",
-        "keyCert": "config_keys/keypriv.pem",
-        "keyCertPwd": ""
+        "certSigningKeyFileECDSA": "config_keys/mpk_ecdsa.pem",
+        "certSigningKeyFileRSA": "config_keys/mpk.pem",
+        "signingAlgo": "RSA",
+        "signedCertificateFile": "PLACEHOLDER_PATH/temp/signed_cert.bin"
     },
-    "finalMetaImage": "PLACEHOLDER_PATH/health_detect_6844_system.release.appimage"
+    "metaImageFile": "PLACEHOLDER_PATH/health_detect_6844_system.Release.appimage",
+    "coreImages": []
 }
