feat: 更新项目规则和开发记录
- 新增编码保护规范v3.0 (ENCODING-PROTECTION.md)
- 新增多个instructions规则文件
- 更新HealthDetect项目代码和配置
- 添加2026-01-15开发记录
- 新增GitHub workflows配置

--- a/project-code/AWRL6844_HealthDetect/profiles/health_detect_standard.cfg
+++ b/project-code/AWRL6844_HealthDetect/profiles/health_detect_standard.cfg
@@ -31,12 +31,12 @@ cfarFovCfg 1 -20.16 20.16
 aoaProcCfg 64 64
 aoaFovCfg -60 60 -60 60
 clutterRemoval 0
-% Factory calibration (first use)
+% Factory calibration - ENABLED (Round 11 fix)
+% Parameters: saveEnable=1, restoreEnable=0, rxGain=44, txBackoff=2, flashOffset=0x1ff000
 factoryCalibCfg 1 0 44 2 0x1ff000
 % Runtime calibration
 runtimeCalibCfg 1
+% Antenna geometry - REQUIRED (do not comment out!)
 antGeometryBoard xWRL6844EVM
-adcDataSource 0 adc_test_data_0001.bin
-adcLogging 0
 lowPowerCfg 1
 sensorStart 0 0 0 0
